--- a/css.css/style.css
+++ b/css.css/style.css
@@ -26,7 +26,7 @@ nav a:hover {
     background-color: #575757;
     border-radius: 5px;
 }
-.content{
+.cont{
     text-align: center;
 }
 .search-container {
@@ -54,4 +54,74 @@ nav a:hover {
 
 .search-container button:hover {
     background-color: #777;
+}
+.container {
+    display: flex; /* Use flexbox */
+    justify-content: space-between; /* Spaces out containers evenly */
+    gap: 10px; /* Adds spacing between containers */
+    padding: 30px;
+}
+
+/* Individual box styling */
+.box {
+    flex: 1; /* Makes all boxes take equal space */
+    background-color: white;
+    padding: 100px;
+    text-align: center;
+    border:1px groove;
+    font-size: 20px;
+}
+.box:hover {
+    transform: scale(1.1); /* Increases size by 10% */
+    background-color: rgb(235, 239, 243); /* Changes color on hover */
+    color: black;
+    transition: 0.5s;
+}
+footer {
+    background-color: rgba(59, 99, 172, 0.532);
+    color: white;
+    padding: 20px 0;
+    text-align: left;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: auto;
+}
+.footer-section {
+    width: 30%;
+    padding: 10px;
+}
+
+.footer-section h3 {
+    margin-bottom: 10px;
+    font-size: 25px;
+    text-transform: uppercase;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin: 5px 0;
+}
+
+.footer-section ul li a {
+    color:white;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.footer-section ul li a:hover {
+    color: white;
+}
+
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 20px;
 }
