--- a/css.css/style.css
+++ b/css.css/style.css
@@ -58,24 +58,25 @@ nav a:hover {
 .container {
     display: flex; /* Use flexbox */
     justify-content: space-between; /* Spaces out containers evenly */
-    gap: 10px; /* Adds spacing between containers */
+    gap: 30px; /* Adds spacing between containers */
     padding: 30px;
 }
 
 /* Individual box styling */
 .box {
     flex: 1; /* Makes all boxes take equal space */
-    background-color: white;
-    padding: 100px;
+    /*background-color: white;*/
+    padding: 40px;
     text-align: center;
     border:1px groove;
     font-size: 20px;
+    border-radius: 20px; /* Curved corners */
 }
 .box:hover {
     transform: scale(1.1); /* Increases size by 10% */
     background-color: rgb(235, 239, 243); /* Changes color on hover */
     color: black;
-    transition: 0.5s;
+    transition: 0.9s;
 }
 footer {
     background-color: rgba(59, 99, 172, 0.532);
@@ -124,4 +125,20 @@ footer {
 .footer-bottom {
     margin-top: 20px;
     font-size: 20px;
+}
+.button {
+    background-color: #3e4954;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 14px;
+    /*position: absolute;*/
+    bottom: 15px;
+    right: 15px;
+    transition:  0.3s;
+}
+
+.button:hover {
+    background-color: #0056b3;
 }
